graph current too

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "peaceful-bottom",
+   "id": "lonely-atmosphere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "developed-blackjack",
+   "id": "tropical-september",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,21 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "lesbian-commissioner",
+   "execution_count": null,
+   "id": "blond-words",
    "metadata": {},
    "outputs": [],
    "source": [
     "files = glob.glob('../data/*')\n",
     "for file in files:\n",
     "    df = pd.read_csv(file)\n",
+    "    \n",
     "    fig = px.line(x=df.timestamp, y=df.voltage)\n",
-    "    fig.write_html(f\"{stem(file)}.html\")"
+    "    fig.write_html(f\"{stem(file)}-voltage.html\")\n",
+    "    \n",
+    "    fig = px.line(x=df.timestamp, y=df.current)\n",
+    "    fig.write_html(f\"{stem(file)}-current.html\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "disturbed-christopher",
+   "id": "recorded-roads",
    "metadata": {},
    "source": [
     "Open the htmls alone- they're big."
