--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "electoral-encyclopedia",
+   "id": "compliant-snapshot",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "import pandas as pd\n",
     "import glob\n",
     "import os"
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "theoretical-showcase",
+   "id": "dirty-providence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,25 +26,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "waiting-cooperation",
+   "execution_count": null,
+   "id": "guided-actress",
    "metadata": {},
    "outputs": [],
    "source": [
     "files = glob.glob('../data/*')\n",
     "for file in files:\n",
     "    df = pd.read_csv(file)\n",
-    "    \n",
-    "    fig = px.line(x=df.timestamp, y=df.voltage)\n",
-    "    fig.write_html(f\"{stem(file)}-voltage.html\")\n",
-    "    \n",
-    "    fig = px.line(x=df.timestamp, y=df.current)\n",
+    "    # in-place normalization\n",
+    "    [\n",
+    "       df[col].update(\n",
+    "            (df[col] - df[col].min()) / (df[col].max() - df[col].min()))\n",
+    "            for col in ['voltage', 'current']\n",
+    "    ]\n",
+    "    fig = go.Figure()\n",
+    "    voltage_shifted = df.voltage.add(0.5)\n",
+    "    fig.add_trace(go.Scattergl(x=df.timestamp, y=voltage_shifted, opacity=0.1, legendgroup='V'))\n",
+    "    fig.add_trace(go.Scattergl(x=df.timestamp, y=df.current, opacity=0.1, legendgroup='C'))\n",
     "    fig.write_html(f\"{stem(file)}-current.html\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "superb-powder",
+   "id": "committed-analysis",
    "metadata": {},
    "source": [
     "Open the htmls alone- they're big."
