glob x data only

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob.glob('../data/*')\n",
+    "files = glob.glob('../data/2020*')\n",
     "for file in files:\n",
     "    df = pd.read_csv(file)\n",
     "    # in-place normalization\n",
